--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -73,8 +73,10 @@ $(function() {
 	<div>
 	<input type="submit" value="Login" id="submit">
 	</div> 
-	<a href="signup">New user ? Register </a>
-</form>
+	New user?<br>
+	<a href="farmer_registration.html">Register as Farmer</a></br>
+	<a href="bidder_registration.html">Register as Bidder</a>
+ </form>
 <div id="error"></div>
 </div>
 
