html pages (just for the sake of push)

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -22,15 +22,15 @@ $(function() {
 			success : function(response) {
 				if(response=="farmer")
 					{
-					window.location.href="farmerHome.html"
+					window.location.href="farmerDashboard.html"
 					}
 				else if(response=="admin")
 				{
-				window.location.href="adminHome.html"
+				window.location.href="Admin.html"
 				}
 				else if(response=="bidder")
 				{
-				window.location.href="bidderHome.html"
+				window.location.href="bidderDashboard.html"
 				}
 				else{
 					$("#error").html("Invalid Credentials")
