--- a/src/main/webapp/AdminLogin.html
+++ b/src/main/webapp/AdminLogin.html
@@ -20,8 +20,8 @@
 </div>
   <article>
     <a href = "Admin.html">Crop Sell Requests</a></br></br>
-    <a href = "">Sell all Farmer details</a></br></br>
-    <a href = "">Sell all Bidder details</a></br>
+    <a href = "">See all Farmer details</a></br></br>
+    <a href = "">See all Bidder details</a></br>
     
   </article>
 </section>
